# bump-version

./: .gitignore  LICENSE.md  README.md  pyproject.toml
docs/: DECISIONS.md
src/bump_version/: __init__.py  cli.py
