[project]
name = "bump-version"
dynamic = ["version"]
description = "A CLI tool to bump semantic version tags in Git repositories"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "John Borwick", email = "borwick@uw.edu" }]
keywords = ["git", "version", "semver", "tags", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.scripts]
bump-version = "bump_version.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/bump_version"]

[tool.hatch.build.targets.sdist]
include = ["src/bump_version"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]
